SERVER-32873 Fix incorrect handling of NumberLong in $pow function

Signed-off-by: Charlie Swanson <charlie.swanson@mongodb.com>

Closes #1211